<resources>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="timepicker_year">年</string>
    <string name="timepicker_month">月</string>
    <string name="timepicker_day">日</string>
    <string name="timepicker_hour">时</string>
    <string name="timepicker_min">分</string>
    <string name="timepicker_title">选择起止时间</string>
    <string name="timepicker_finish">完成</string>
    <string name="timepicker_title_default">设置</string>
    <string name="app_name">"电竞之家 "</string>
    <string name="index_name">"首页"</string>
    <string name="help_common_problem">"常见问题"</string>
    <string name="beater_monery">我的钱包</string>
    <string name="mine_orders">我的订单</string>
    <string name="send_orders_menu">发布订单</string>
    <string name="no_orders_menu">未接订单</string>
    <string name="ranking_menu">收入排行</string>
    <string name="beart_center_menu">打手中心</string>
    <string name="no_orders_play">游戏区服</string>
    <string name="no_orders_by">综合排序</string>
    <string name="no_orders_chooes">高级筛选</string>
    <string name="no_orders_type_all">全部</string>
    <string name="no_orders_type_beatering">代练中</string>
    <string name="no_orders_type_dys">待验收</string>
    <string name="no_orders_type_cancle">撤销中</string>
    <string name="no_orders_type_problem">异常</string>
    <string name="no_orders_type_locking">锁定</string>
    <string name="no_orders_type_cancles">已撤销</string>
    <string name="no_orders_type_yjs">已结算</string>
    <string name="no_orders_type_yzc">已仲裁</string>
    <string name="no_orders_type_qzzc">强制仲裁</string>
    <string name="main_bootm_message">消息</string>
    <string name="main_bootm_god">超神秀</string>
    <string name="leveing_pice">算算价格</string>
    <string name="leveing_type">组排类型</string>
    <string name="leveing_choees_type">请选择组排类型</string>
    <string name="leveing_in_where">所在区服</string>
    <string name="leveing_choees_in_where">请选择组所在区服</string>
    <string name="leveing_play_type">代练类型</string>
    <string name="leveing_chooes_play_type">请选择代练类型</string>
    <string name="leveing_start">初始段位</string>
    <string name="leveing_chooes_start">请选择初始段位</string>
    <string name="leveing_target">目标段位</string>
    <string name="leveing_chooes_target">请选择目标段位</string>
    <string name="leveing_now_win">游戏区域</string>
    <string name="next">下一步</string>
    <string name="vip_integral_guid">随着VIP等级的提升,消费时所获得的积分也发生变化</string>
    <string name="vip_integral_guid_exp">例: 玩家购入29.8元的皮肤,自身是VIP1用户,英获取积分倍数为1.1,那么该玩家世纪获取的积分应该是28.8*1.1=31.69</string>
    <string name="beater_reward_guid">大神在接取订单时,接单价格会随会员等级的提升而提升</string>
    <string name="beater_reward_guid_exp">例:订单价格为100,不同VIP等级所付的价格不同</string>
    <string name="beater_reward_guid_title">提高费率如下</string>
    <string name="vip_rules_title">VIP等级随着成长值的提升而提升,目前VIP等级涉及五个段位,相对应的成长值如下</string>
    <string name="beater_auth_name">真实姓名</string>
    <string name="beater_auth_name_yip">请填写您的真实姓名</string>
    <string name="beater_auth_code">身份证号</string>
    <string name="beater_auth_code_tip">请填写您的身份证号</string>
    <string name="beater_auth_wx">微信号</string>
    <string name="beater_auth_wx_tip">请填写您的微信号</string>
    <string name="title_activity_before_pay_order">BeforePayOrderActivity</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_aure_succ">AureSuccActivity</string>
    <string name="pass_word">"0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRETUVWXYZ"</string>
    <string name="normal">按住 说话</string>
    <string name="recording">松开 结束</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>
    <string name="toolong">录音时间过长</string>
    <string name="title_activity_hero">HeroActivity</string>
    <string name="title_activity_hero_order2">HeroOrder2Activity</string>
</resources>
