<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--打手认证  -->
    <include layout="@layout/title_layout" />

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/personal_seting_header"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_name" />

        <EditText
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/beater_auth_name_yip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/beater_auth_code"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_code" />

        <EditText
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/beater_auth_code_tip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/beater_auth_wx"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_wx" />

        <EditText
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/beater_auth_wx_tip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y45"
        android:paddingLeft="@dimen/x35"
        android:paddingRight="@dimen/x35"
        android:paddingTop="@dimen/y45">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/y288"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/beater_auth_scsfz" />

            <TextView
                style="@style/GrayTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/y30"
                android:text="上传身份证正面"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/y288"
            android:layout_marginLeft="@dimen/x45"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/beater_auth_scsfz" />

            <TextView
                style="@style/GrayTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/y30"
                android:text="上传身份证正面"
                android:textSize="10sp" />

            <TextView
                style="@style/GrayTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/y30"
                android:text="上传身份证反面"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y45"
        android:paddingLeft="@dimen/x35"
        android:paddingRight="@dimen/x35"
        android:paddingTop="@dimen/y45">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/y288"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/beater_auth_duanwei" />




        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/y288"
            android:layout_marginLeft="@dimen/x45"
            android:layout_weight="1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/beater_auth_duanwei" />



            <TextView
                style="@style/GrayTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/y30"
                android:text="世界喊话截图"
                android:textSize="10sp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        style="@style/BaseBtnStyle"
        android:layout_marginTop="@dimen/y155"
        android:text="@string/next" />

</LinearLayout>