<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--打手认证 2  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:background="@color/colorPrimary"
        android:paddingRight="10dp"
        >
        <LinearLayout
            android:id="@+id/img_btone_back"
            android:layout_width="@dimen/x120"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_marginLeft="@dimen/x20"
                android:layout_centerVertical="true"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tx_title_name"
            style="@style/BigTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="打手认证"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />
        <android.support.design.widget.TabLayout
            android:id="@+id/tab_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            >
        </android.support.design.widget.TabLayout>
        <ImageView
            android:id="@+id/img_title_right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            />


    </RelativeLayout>

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">
        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/personal_seting_header"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_name" />
        <EditText
            android:id="@+id/true_name"
            style="@style/DefaultEditStyle"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType=""
            android:hint="@string/beater_auth_name_yip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/beater_auth_code"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_code" />

        <EditText
            android:id="@+id/true_IDNumber"
            android:singleLine="true"
            style="@style/DefaultEditStyle"
            android:inputType="textCapCharacters"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/beater_auth_code_tip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/y45"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y25"
        android:paddingLeft="@dimen/x35"
        android:paddingRight="@dimen/x35"
        >

        <RelativeLayout
            android:layout_width="@dimen/x425"
            android:layout_height="@dimen/y370">

            <ImageView
                android:id="@+id/Authentication3"
                android:layout_width="@dimen/x425"
                android:layout_height="@dimen/y370"
                android:src="@drawable/beater_auth_code_zm" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/x425"
            android:layout_height="@dimen/y370">

            <ImageView
                android:id="@+id/Authentication4"
                android:layout_width="@dimen/x425"
                android:layout_height="@dimen/y370"
                android:src="@drawable/beater_auth_code_back" />
        </RelativeLayout>


    </LinearLayout>

    <Button
        android:id="@+id/player_conform_nextbtn"
        style="@style/BaseBtnStyle"
        android:layout_marginTop="@dimen/y60"
        android:text="@string/next"
        />

</LinearLayout>