<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--打手认证 2  -->
    <include layout="@layout/title_layout" />

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">
        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/personal_seting_header"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_name" />
        <EditText
            android:id="@+id/Name"
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/beater_auth_name_yip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/beater_auth_code"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="@string/beater_auth_code" />

        <EditText
            android:id="@+id/IDNumber"
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/beater_auth_code_tip"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:layout_marginTop="@dimen/y2"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/beater_auth_code"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="申请时间" />

        <EditText
            android:id="@+id/ApplicationTime"
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="选择时间"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        style="@style/LeveingLieanLayouStyle"
        android:layout_marginTop="@dimen/y2"
        android:paddingLeft="@dimen/x65">

        <TextView
            style="@style/BlackTextStyle"
            android:layout_width="@dimen/x300"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/beater_auth_code"
            android:drawablePadding="@dimen/x35"
            android:gravity="center|left"
            android:text="同时接单数" />

        <EditText
            android:id="@+id/OrderMaxNumber"
            style="@style/DefaultEditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="最多5单"
            android:inputType="number"
            android:paddingLeft="@dimen/x30"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/y45"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y25"
        android:paddingLeft="@dimen/x35"
        android:paddingRight="@dimen/x35"
        >

        <RelativeLayout
            android:layout_width="@dimen/x425"
            android:layout_height="@dimen/y370">

            <ImageView
                android:id="@+id/Authentication1"
                android:layout_width="@dimen/x425"
                android:layout_height="@dimen/y370"
                android:src="@drawable/beater_auth_duanwei"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/x425"
            android:layout_height="@dimen/y370">

            <ImageView
                android:layout_width="@dimen/x425"
                android:layout_height="@dimen/y370"
                android:src="@drawable/beater_auth_duanwei"
                android:id="@+id/Authentication2"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y45"
        android:paddingLeft="@dimen/x35"
        android:paddingRight="@dimen/x35">

        <RelativeLayout
            android:layout_width="@dimen/x425"
            android:layout_height="@dimen/y370">

            <ImageView
                android:id="@+id/Authentication3"
                android:layout_width="@dimen/x425"
                android:layout_height="@dimen/y370"
                android:src="@drawable/beater_auth_code_zm" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/x425"
            android:layout_height="@dimen/y370">

            <ImageView
                android:id="@+id/Authentication4"
                android:layout_width="@dimen/x425"
                android:layout_height="@dimen/y370"
                android:src="@drawable/beater_auth_code_back" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/player_conform_nextbtn"
        style="@style/BaseBtnStyle"
        android:layout_marginTop="@dimen/y60"
        android:text="@string/next"
        />

</LinearLayout>